Weeks/03.-07.07.23/IfNote.txt
if
	else
		elif



CMD output:

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>
C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
38
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
13
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
13
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
13
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
  File "C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py", line 5
    elif x = 40:
         ^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
  File "C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py", line 12
    print('compiling done')
    ^
IndentationError: expected an indented block after 'else' statement on line 8

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
40
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
false number input
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py
Python 3.11.4 (tags/v3.11.4:d2340ef, Jun  7 2023, 05:45:37) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> BufferCache = 'true'
>>> BufferCache
'true'
>>> BufferCache
'true'
>>> exit()

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
Buffer is set to true
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
BufferCache is enabled
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
BufferCache is enabled
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
BufferCache is enabled
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
Traceback (most recent call last):
  File "C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py", line 1, in <module>
    BufferCache = false
                  ^^^^^
NameError: name 'false' is not defined. Did you mean: 'False'?

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
feature disabled
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
BufferCache is enabled
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
BufferCache is enabled
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
Test
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
Traceback (most recent call last):
  File "C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py", line 1, in <module>
    BufferCache = xx
                  ^^
NameError: name 'xx' is not defined

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
BufferCache is enabled
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
BufferCache is enabled
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>py C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23\ifScript.py
Test
compiling done

C:\Users\insertDisc\Desktop\Python\Weeks\03.-07.07.23>